--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
       href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>RageChat</title>
+    <title>Lithium</title>
   </head>
-  <body>
+  <body class="bg-gray-900 overflow-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
